--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@testing-library/user-event": "^14.5.2",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.3"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.4.3",
+    "@testing-library/user-event": "^14.5.2",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/react": "^18.2.66",
